--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
         <span class="error-message" id="passwordError">Password cannot be empty</span>
       
         <button type="submit" id="button">Claim your free trial</button>
-        <small>By clicking the button, you are agreeing to our
-          <span> Terms and Services</span></small>
+        <p class="terms">By clicking the button, you are agreeing to our <a href="#">Terms and Services</a></p>
       </form>
       
     </div>
