--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="password-container">
           <input type="password" id="password" class="password" placeholder="Password" />
           <span class="eye-icon" onclick="togglePassword()">
-            <i class="fa fa-eye"></i>
+            <i class="fa fa-eye-slash"></i>
           </span>
         </div>
         <span class="error-message" id="passwordError">Password cannot be empty</span>
